--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ a{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    width: auto;
+    height: 100vh;
     
 }
 
@@ -134,7 +135,7 @@ a{
     align-items: center;
     flex-wrap: wrap;
     gap: 8px;
-    
+    min-height: 50vh;
 }
 
 .card-item{
